# aframe

./: .gitignore  PavRibsPointsFromRade.mat  README.md  SUMMARY_GRAPH.txt  beam_stuff.py  bunny_stl.py  icosphere.py  matrix1.pkl  matrix2.pkl  michael.csv  pav_3g_results_element.xlsx  pav_3g_results_nodal.xlsx  pyproject.toml  requirements.txt  run_opt_x.out  score.py  setup.py  stl_import.py  zephyr.stl
MODEL_SUMMARY/: GRAPH.txt  HIERARCHY.txt  VARS.txt  graph.txt  variables.txt
MODEL_SUMMARY/frontend/: hierarchy.txt  promotions_connections.txt
aframe/: __init__.py
aframe/core/: aframe.py  aframe2.py  aframe_old.py  backward_euler.py  beam.py  beam_model.py  beam_model2.py  beam_module.py  buckle.py  computation_model.py  cs.py  cs_class.py  dataclass.py  dataclass2.py  demo.py  frame.py  gpt.py  joint.py  mass.py  mass2.py  massmatrix.py  massprop.py  materials.py  midpoint_rule.py  nodal_stress.py  sim.py  sisr.py  stress.py
aframe/deprecated/: beam_module.py
aframe/utils/: plot.py  plot_box.py  plot_matplotlib.py  plot_pyvista.py
docs/: conf.py
docs/src/: getting_started.md  welcome.md
examples/: 1_element.py  1_element_beam_test.py  NASA_LPC_beam.py  NASA_LPC_beam_dev.py  aurora_pav_vv.py  aurora_test.py  bingran.py  bingran_cantilever_beam.py  dynamic.py  dynamic_beam.py  dynamic_truss.py  inertial_loads.py  lander.py  nasa_lpc.py  pyvista_test.py  quad_lander.py  run2.py  run_box.py  run_bridge.py  run_new_model.py  run_new_model_box.py  run_pav_2024.py  run_peg.py  run_val_box.py  run_wing.py  run_zephyr.py  single_beam.py  single_beam_opt.py  singularity.py  two_beams.py  two_joined_beams.py  zephyr_gust_response.py
examples/advanced_examples/: run_pav.py
examples/bunny/: bunny.py  (+1 more)
(+8 files in other folders)
